Tentando arrumar texto pra voz e adição de imagens
Adicionei as imagens oficiais que a Carol pediu, tentei arrumar o microfone pra trocar o ícone mas nas paginas não esta indo ainda e uns testes a mais criados.

--- a/contato.html
+++ b/contato.html
@@ -24,18 +24,18 @@
 
 
 <body>
-<!-- começo vlibras  -->
+    <!-- começo vlibras  -->
     <div vw class="enabled">
-    <div vw-access-button class="active"></div>
-    <div vw-plugin-wrapper>
-      <div class="vw-plugin-top-wrapper"></div>
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
     </div>
-  </div>
-  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-  <script>
-    new window.VLibras.Widget('https://vlibras.gov.br/app');
-  </script>
-<!--  fim vlibras   -->
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
+    <!--  fim vlibras   -->
     <header>
         <nav class="navbar navbar-expand-lg fixed">
             <div class="container-fluid">
@@ -265,7 +265,7 @@
             isReading = false; // Garantir que o estado de leitura é falso
         }
 
-        // Selecionar todos os elementos com texto, incluindo navbar, links e botões
+        // Selecionar todos os elementos com texto
         const textElements = document.querySelectorAll('p, h1, h2, h3, h4, h5, h6, a, button, .texto_descricao, .row, #quantity');
 
         textElements.forEach(element => {
@@ -278,7 +278,7 @@
             });
         });
 
-        // Adicionar evento ao botão para parar a leitura quando clicado
+        // Adicionar evento ao botão para alternar a leitura quando clicado
         const toggleButton = document.getElementById('toggleReading'); // Seleciona o botão
         toggleButton.addEventListener('click', function () {
             if (isReading) {
@@ -287,12 +287,16 @@
             isMouseReadingEnabled = !isMouseReadingEnabled; // Alterna entre habilitar ou desabilitar a leitura com o mouse
 
             // Mudar o ícone do botão, dependendo do estado
-            const icon = this.querySelector('i');
+            const icon = this.querySelector('i'); // Selecione o ícone dentro do botão
             if (isMouseReadingEnabled) {
-                icon.classList.replace('fa-microphone-slash', 'fa-microphone'); // Ícone de microfone
+                icon.classList.remove('fa-microphone'); // Remove a classe do ícone de microfone
+                icon.classList.add('fa-microphone-slash'); // Adiciona a classe do ícone de microfone com risco
             } else {
-                icon.classList.replace('fa-microphone', 'fa-microphone-slash'); // Ícone de microfone com risco
+                icon.classList.remove('fa-microphone-slash'); // Remove a classe do ícone de microfone com risco
+                icon.classList.add('fa-microphone'); // Adiciona a classe do ícone de microfone
             }
+
+            console.log('isMouseReadingEnabled:', isMouseReadingEnabled); // Log para depuração
         });
     </script>
 
