--- a/eventos.html
+++ b/eventos.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-<!-- começo vlibras -->
+  <!-- começo vlibras -->
   <div vw class="enabled">
     <div vw-access-button class="active"></div>
     <div vw-plugin-wrapper>
@@ -35,7 +35,7 @@
   <script>
     new window.VLibras.Widget('https://vlibras.gov.br/app');
   </script>
-<!--   fim vlibras -->
+  <!--   fim vlibras -->
   <!-- navbar -->
   <header>
     <nav class="navbar navbar-expand-lg fixed">
@@ -210,8 +210,8 @@
       isReading = false; // Garantir que o estado de leitura é falso
     }
 
-    // Selecionar todos os elementos com texto, incluindo navbar, links e botões
-    const textElements = document.querySelectorAll('p, h1, h2, h3, h4, h5, h6, a, button, .texto_descricao');
+    // Selecionar todos os elementos com texto
+    const textElements = document.querySelectorAll('p, h1, h2, h3, h4, h5, h6, a, button, .texto_descricao, .row, #quantity');
 
     textElements.forEach(element => {
       element.addEventListener('mouseover', function () {
@@ -223,7 +223,7 @@
       });
     });
 
-    // Adicionar evento ao botão para parar a leitura quando clicado
+    // Adicionar evento ao botão para alternar a leitura quando clicado
     const toggleButton = document.getElementById('toggleReading'); // Seleciona o botão
     toggleButton.addEventListener('click', function () {
       if (isReading) {
@@ -232,12 +232,16 @@
       isMouseReadingEnabled = !isMouseReadingEnabled; // Alterna entre habilitar ou desabilitar a leitura com o mouse
 
       // Mudar o ícone do botão, dependendo do estado
-      const icon = this.querySelector('i');
+      const icon = this.querySelector('i'); // Selecione o ícone dentro do botão
       if (isMouseReadingEnabled) {
-        icon.classList.replace('fa-microphone-slash', 'fa-microphone'); // Ícone de microfone
+        icon.classList.remove('fa-microphone'); // Remove a classe do ícone de microfone
+        icon.classList.add('fa-microphone-slash'); // Adiciona a classe do ícone de microfone com risco
       } else {
-        icon.classList.replace('fa-microphone', 'fa-microphone-slash'); // Ícone de microfone com risco
+        icon.classList.remove('fa-microphone-slash'); // Remove a classe do ícone de microfone com risco
+        icon.classList.add('fa-microphone'); // Adiciona a classe do ícone de microfone
       }
+
+      console.log('isMouseReadingEnabled:', isMouseReadingEnabled); // Log para depuração
     });
   </script>
 
