--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <title>Menu</title>
     <link rel="stylesheet" href="CSS/style_menu.css">
     <link rel="stylesheet" href="CSS/style_navbar.css">
-    <link rel="stylesheet" href="CSS/style_footer.css">
+    <link rel="stylesheet" href="CSS/style_rodape.css">
     <link rel="stylesheet" href="CSS/style_texto_voz.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,6 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
@@ -26,23 +27,36 @@
 </head>
 
 <body>
-<!--  começo vlibras  -->
+    <style>
+        body {
+            background-color: #8DA5ED !important;
+            background-image: url('Image/home_fundo.PNG');
+            background-size: 100vw 100vh;
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            object-fit: cover;
+        }
+    </style>
+
+    <!--  começo vlibras  -->
     <div vw class="enabled">
-    <div vw-access-button class="active"></div>
-    <div vw-plugin-wrapper>
-      <div class="vw-plugin-top-wrapper"></div>
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
     </div>
-  </div>
-  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-  <script>
-    new window.VLibras.Widget('https://vlibras.gov.br/app');
-  </script>
-<!--  fim vlibras  -->
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
+    <!--  fim vlibras  -->
+
     <header>
         <nav class="navbar navbar-expand-md fixed-top ">
             <div class="container-fluid  ">
                 <div>
-                    <img src="Image/Logo Passatempo.png" class="home_logo ">
+                    <!-- <img src="Image/Logo Passatempo.png" class="home_logo " style="width: 50px;"> -->
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -93,22 +107,143 @@
         <br>
 
         <!-- Título do Site -->
+        <div class="container-fluid" id="containerzao">
+            <div class="container py-3 titulo">
+                <div class="row align-items-center">
+                    <div class="col text-center">
+                        <h1 class="h4 mb-0 texto" style="font-size: 60px;">Eventos - Passatempo Educativo</h1>
+                    </div>
+                    <div class="col-auto">
 
-        <div class="container py-3 titulo">
-            <div class="row align-items-center">
-                <div class="col text-center">
-                    <h1 class="h4 mb-0 texto" style="font-size: 60px;">Eventos - Passatempo Educativo</h1>
+                        <!-- Logo -->
+
+                        <img src="Image/Logo Passatempo.png" alt="Logo do Site" class="img-fluid"
+                            style="max-width: 130px; max-height: 130px; ">
+                    </div>
+                    <div class="col-auto"></div> <!-- Coluna vazia para ocupar espaço à direita -->
                 </div>
-                <div class="col-auto">
-
-                    <!-- Logo -->
-
-                    <img src="Image/Logo Passatempo.png" alt="Logo do Site" class="img-fluid"
-                        style="max-width: 130px; max-height: 130px; ">
-                </div>
-                <div class="col-auto"></div> <!-- Coluna vazia para ocupar espaço à direita -->
             </div>
+            <div class="container-fluid col-6">
+                <div class="row_subtitulo">
+                    <h1>Quem Somos</h1>
+                </div>
+            </div>
+            <div class="container-fluid col-10">
+                <div class="container descricao" id="00">
+                    <p>A Passatempo Eventos é composta por profissionais qualificados e dedicados. Essa diversidade de
+                        conhecimentos e habilidades nos permite oferecer um atendimento personalizado e eficiente. </p>
+
+                    <p>Além disso, a constante troca de experiências e a colaboração entre os membros da equipe
+                        enriquecem
+                        nosso ambiente de trabalho, garantindo um ambiente acolhedor e propício ao aprendizado.</p>
+
+                    <p>Muitos profissionais fizeram parte de um curso Recreatur que oferecemos em São Paulo,
+                        incentivando a
+                        liderança nos jovens e expandindo suas perspectivas de trabalho.</p>
+                </div>
+            </div>
+            <div id="carouselExampleCaptions" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
+                            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide"
+                            preserveAspectRatio="xMidYMid slice" focusable="false" id="imagem0">
+                            <title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555"
+                                dy=".3em" id="01">Primeira foto</text>
+                        </svg>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 id="02">Oficinas</h5>
+                            <p id="03">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia est animi
+                                totam optio
+                                omnis
+                                laborum perferendis iste quibusdam dolores laboriosam sapiente, voluptate nemo aut
+                                earum,
+                                incidunt hic eveniet non officia?</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
+                            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide"
+                            preserveAspectRatio="xMidYMid slice" focusable="false" id="imagem1">
+                            <title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#666"></rect><text x="50%" y="50%" fill="#444"
+                                dy=".3em" id="04">Segunda foto</text>
+                        </svg>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 id="05">Eventos Sociais</h5>
+                            <p id="06">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas reprehenderit nulla
+                                eos
+                                saepe
+                                consectetur non porro, facilis dolores laboriosam alias veritatis qui maiores ipsam eum
+                                corrupti
+                                corporis pariatur possimus. Possimus!</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
+                            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Third slide"
+                            preserveAspectRatio="xMidYMid slice" focusable="false" id="imagem2">
+                            <title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#555"></rect><text x="50%" y="50%" fill="#333"
+                                dy=".3em" id="07">Terceira foto</text>
+                        </svg>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 id="08">Eventos Corporativos</h5>
+                            <p id="09">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit libero, non minus
+                                voluptates
+                                molestiae quaerat illum necessitatibus vitae deleniti, sunt qui perspiciatis corrupti
+                                nihil vero
+                                nulla reprehenderit dolore consectetur ut!</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
+                            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Third slide"
+                            preserveAspectRatio="xMidYMid slice" focusable="false" id="imagem3">
+                            <title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#555"></rect><text x="50%" y="50%" fill="#333"
+                                dy=".3em" id="10">Quarta foto</text>
+                        </svg>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 id="11">Saúde e Bem-Estar</h5>
+                            <p id="12">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit libero, non minus
+                                voluptates
+                                molestiae quaerat illum necessitatibus vitae deleniti, sunt qui perspiciatis corrupti
+                                nihil vero
+                                nulla reprehenderit dolore consectetur ut!</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+            <br>
+            <br>
+            <br>
+            <br>
+
         </div>
+
     </header>
 
     <div class="button-container">
@@ -121,7 +256,7 @@
 
     <!-- quem somos -->
 
-    <div class="container-fluid col-6">
+    <!-- <div class="container-fluid col-6">
         <div class="row_subtitulo">
             <h1>Quem Somos</h1>
         </div>
@@ -137,7 +272,7 @@
             <p>Muitos profissionais fizeram parte de um curso Recreatur que oferecemos em São Paulo, incentivando a
                 liderança nos jovens e expandindo suas perspectivas de trabalho.</p>
         </div>
-    </div>
+    </div> -->
 
     <!-- espaçamento -->
 
@@ -147,7 +282,7 @@
 
     <!-- carrosel  -->
 
-    <div id="carouselExampleCaptions" class="carousel slide">
+    <!-- <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -234,7 +369,7 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
-    </div>
+    </div> -->
 
     <!-- espaçamento -->
 
@@ -332,8 +467,8 @@
             isReading = false; // Garantir que o estado de leitura é falso
         }
 
-        // Selecionar todos os elementos com texto, incluindo navbar, links e botões
-        const textElements = document.querySelectorAll('p, h1, h2, h3, h4, h5, h6, a, button, .texto_descricao');
+        // Selecionar todos os elementos com texto
+        const textElements = document.querySelectorAll('p, h1, h2, h3, h4, h5, h6, a, button, .texto_descricao, .row, #quantity');
 
         textElements.forEach(element => {
             element.addEventListener('mouseover', function () {
@@ -345,7 +480,7 @@
             });
         });
 
-        // Adicionar evento ao botão para parar a leitura quando clicado
+        // Adicionar evento ao botão para alternar a leitura quando clicado
         const toggleButton = document.getElementById('toggleReading'); // Seleciona o botão
         toggleButton.addEventListener('click', function () {
             if (isReading) {
@@ -354,12 +489,16 @@
             isMouseReadingEnabled = !isMouseReadingEnabled; // Alterna entre habilitar ou desabilitar a leitura com o mouse
 
             // Mudar o ícone do botão, dependendo do estado
-            const icon = this.querySelector('i');
+            const icon = this.querySelector('i'); // Selecione o ícone dentro do botão
             if (isMouseReadingEnabled) {
-                icon.classList.replace('fa-microphone-slash', 'fa-microphone'); // Ícone de microfone
+                icon.classList.remove('fa-microphone'); // Remove a classe do ícone de microfone
+                icon.classList.add('fa-microphone-slash'); // Adiciona a classe do ícone de microfone com risco
             } else {
-                icon.classList.replace('fa-microphone', 'fa-microphone-slash'); // Ícone de microfone com risco
+                icon.classList.remove('fa-microphone-slash'); // Remove a classe do ícone de microfone com risco
+                icon.classList.add('fa-microphone'); // Adiciona a classe do ícone de microfone
             }
+
+            console.log('isMouseReadingEnabled:', isMouseReadingEnabled); // Log para depuração
         });
     </script>
 
@@ -371,8 +510,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
-</body>
 </body>
 
 </html>
