--- a/testes/teste_menu.html
+++ b/testes/teste_menu.html
@@ -1,131 +1,188 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Área Admin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+
     <style>
         body {
-    background-color: #8DA5ED !important;
-}
+            background-color: #8DA5ED !important;
+            background-image: url('imagem_testes/home_fundo.PNG');
+            background-size: 100vw 100vh;
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            object-fit: cover;            
+        }    
 
-.row_cabecalho {
-    background-color: #6787E7;
-    border-radius: 20px;
-    margin: 0 10% !important;
-    padding: 2.5%;
-}
-.row_titulo_cabecalho{
-    width: 100%;
-    height: 100%;
-}
-.col_titulo_cabecalho {
-    color: black;
-    text-align: center;
-}
-.imagem_cabecalho{
-    max-width: 100%; 
-    max-height: 100%; 
-    height: 160px; 
-    width: 160px;
-}
+            .row_cabecalho {
+                background-color: #6787E7;
+                border-radius: 20px;
+                margin: 0 10% !important;
+                padding: 2.5%;
+            }
 
-.t1_cabecalho {
-    width: 100%;
-    height: 100%;
-    font-size: 3.5rem;
-    font-family: "Luckiest Guy", sans-serif;
-    word-wrap: break-word;
-}
+            .row_titulo_cabecalho {
+                width: 100%;
+                height: 100%;
+            }
 
-.t2_cabecalho {
-    width: 100%;
-    height: 100% !important;
-    font-size: 2.2rem;
-    font-family: "Luckiest Guy", sans-serif;
-    word-wrap: break-word;
-}
+            .col_titulo_cabecalho {
+                color: black;
+                text-align: center;
+            }
 
-.col_imagem_cabecalho {
-    padding: 0 !important;
-    margin: 0 !important;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+            .imagem_cabecalho {
+                max-width: 100%;
+                max-height: 100%;
+                height: 160px;
+                width: 160px;
+            }
 
-.imagem_cabecalho {
-    max-width: 100%;
-    max-height: 100%;
-}
+            .t1_cabecalho {
+                width: 100%;
+                height: 100%;
+                font-size: 3.5rem;
+                font-family: "Luckiest Guy", sans-serif;
+                word-wrap: break-word;
+            }
 
-.t1_descricao {
-    font-size: 40px;
-    margin-top: 3%;
-    font-family: "Luckiest Guy", sans-serif;
-}
+            .t2_cabecalho {
+                width: 100%;
+                height: 100% !important;
+                font-size: 2.2rem;
+                font-family: "Luckiest Guy", sans-serif;
+                word-wrap: break-word;
+            }
 
-.titulo_descricao {
-    background-color: #3E4096;
-    border-radius: 20px;
-    color: white;
-}
+            .col_imagem_cabecalho {
+                padding: 0 !important;
+                margin: 0 !important;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
 
-.texto_descricao {
-    background-color: #F6CC3A;
-    padding: 30px;
-    border-radius: 20px;
-    font-size: 140%;
-    font-family: 'Ubuntu', sans-serif !important;
-}
+            .imagem_cabecalho {
+                max-width: 100%;
+                max-height: 100%;
+            }
 
-/* Ajuste para o carrossel */
-@media (min-width: 576px) {
-    #carouselExampleCaptions {
-        margin-top: 0;
-        margin-left: 0;
-        margin-right: 0;
-    }
-}
+            .t1_descricao {
+                font-size: 40px;
+                margin-top: 3%;
+                font-family: "Luckiest Guy", sans-serif;
+            }
 
-@media (min-width: 768px) {
-    #carouselExampleCaptions {
-        margin-top: 20px;
-        margin-left: 140px;
-        margin-right: 140px;
-    }
-}
+            .titulo_descricao {
+                background-color: #3E4096;
+                border-radius: 20px;
+                color: white;
+            }
 
-@media (min-width: 992px) {
-    #carouselExampleCaptions {
-        margin-top: 20px;
-        margin-left: 140px;
-        margin-right: 140px;
-    }
-}
+            .texto_descricao {
+                background-color: #F6CC3A;
+                padding: 30px;
+                border-radius: 20px;
+                font-size: 140%;
+                font-family: 'Ubuntu', sans-serif !important;
+            }
 
-@media (min-width: 1200px) {
-    #carouselExampleCaptions {
-        margin-top: 20px;
-        margin-left: 140px;
-        margin-right: 140px;
-    }
-}
+            /* Ajuste para o carrossel */
+            @media (min-width: 576px) {
+                #carouselExampleCaptions {
+                    margin-top: 0;
+                    margin-left: 0;
+                    margin-right: 0;
+                }
+            }
 
-@media (min-width: 1400px) {
-    #carouselExampleCaptions {
-        margin-top: 20px;
-        margin-left: 140px;
-        margin-right: 140px;
-    }
-}
+            @media (min-width: 768px) {
+                #carouselExampleCaptions {
+                    margin-top: 20px;
+                    margin-left: 140px;
+                    margin-right: 140px;
+                }
+            }
 
+            @media (min-width: 992px) {
+                #carouselExampleCaptions {
+                    margin-top: 20px;
+                    margin-left: 140px;
+                    margin-right: 140px;
+                }
+            }
 
+            @media (min-width: 1200px) {
+                #carouselExampleCaptions {
+                    margin-top: 20px;
+                    margin-left: 140px;
+                    margin-right: 140px;
+                }
+            }
+
+            @media (min-width: 1400px) {
+                #carouselExampleCaptions {
+                    margin-top: 20px;
+                    margin-left: 140px;
+                    margin-right: 140px;
+                }
+            }
     </style>
 </head>
+
 <body>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
     <div class="container-fluid">
         <div class="row align-items-center justify-content-center row_cabecalho ">
             <div class="col-md-1"></div>
@@ -141,12 +198,116 @@
                     </div>
                 </div>
             </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br> <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br> <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br> <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br> <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-3 col_imagem_cabecalho">
                 <img src="img/Logo Passatempo.png" alt="imagem-logo-passatempo" class="imagem_cabecalho">
             </div>
         </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
