--- a/telas_ofc/eventos-2.html
+++ b/telas_ofc/eventos-2.html
@@ -27,10 +27,10 @@
 
   <!-- navbar -->
   <header>
-    <nav class="navbar navbar-expand-lg fixed">
+    <nav class="navbar navbar-expand-md fixed">
       <div class="container-fluid">
         <div>
-          <img src="img/Logo Passatempo.png" class="passatempo_logo ">
+          <img src="img/Logo Passatempo.png" class="passatempo_logo" alt="Logo Passatempo">
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -42,26 +42,26 @@
           </div>  
           <div class="offcanvas-body">
             <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
-              <li class="nav-item text-top ">
-                <a class="nav-link navegacao_link" aria-current="page" href="home-2.html">Home</a>
+              <li class="nav-item text-top">
+                <a class="nav-link active navegacao_link" aria-current="page" href="home-2.html">Home</a>
               </li>
-              <li class="nav-item navegaçao_item">
-                <a class="nav-link  navegacao_link" href="oficinas-2.html">Oficinas</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="oficinas-2.html">Oficinas</a>
               </li>
-              <li class="nav-item navegaçao_item">
-                <a class="nav-link  navegacao_link active" href="eventos-2.html">Eventos Sociais</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos</a>
               </li>
-              <li class="nav-item navegaçao_item">
-                <a class="nav-link  navegacao_link" href="eventos-2.html">Eventos Corporativos</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="saudeBemEstar-2.html">Saúde e Bem-Estar</a>
               </li>
-              <li class="nav-item navegaçao_item">
-                <a class="nav-link  navegacao_link" href="saudeBemEstar-2.html">Saude e Bem-Estar</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
               </li>
-              <li class="nav-item navegaçao_item">
-                <a class="nav-link  navegacao_link" href="contato-2.html">Contato</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="contato-2.html">Contato</a>
               </li>
-              <li class="nav-item navegaçao_item">
-                <a class="nav-link  navegacao_link" href="admin-2.html">Admin</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="admin-2.html">Admin</a>
               </li>
             </ul>
           </div>
