--- a/telas_ofc/navbar-2.html
+++ b/telas_ofc/navbar-2.html
@@ -35,13 +35,13 @@
                 <a class="nav-link navegacao_link" href="oficinas-2.html">Oficinas</a>
               </li>
               <li class="nav-item navegacao_item">
-                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos Sociais</a>
-              </li>
-              <li class="nav-item navegacao_item">
-                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos Corporativos</a>
+                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos</a>
               </li>
               <li class="nav-item navegacao_item">
                 <a class="nav-link navegacao_link" href="saudeBemEstar-2.html">Saúde e Bem-Estar</a>
+              </li>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
               </li>
               <li class="nav-item navegacao_item">
                 <a class="nav-link navegacao_link" href="contato-2.html">Contato</a>
