--- a/testes/teste.html
+++ b/testes/teste.html
@@ -1,77 +1,193 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Área Admin</title>
-    <link rel="stylesheet" href="CSS/teste_navbar.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
-    <style>
-       
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive Card Carousel</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    .carousel-container {
+      max-width: 1000px;
+      margin: 20px auto;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .carousel-track {
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    .carousel-card {
+      flex: 1 0 33.33%; /* Default: 3 cards per slide */
+      max-width: 33.33%;
+      padding: 15px;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+    div.carousel-card{
+      background-color: blueviolet;
+      padding: 20px;
+      margin: 10px;
+    }
+    .carousel-card h5 {
+      margin: 10px 0;
+      font-size: 18px;
+      
+    }
+
+    .carousel-card p {
+      font-size: 14px;
+      color: #555;
+    }
+
+    .carousel-card img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+      margin-top: 15px;
+    }
+
+    .carousel-controls {
+      display: flex;
+      justify-content: center; /* Center the buttons */
+      gap: 20px; /* Add spacing between the buttons */
+      margin-top: 20px; /* Adjust the distance from the carousel */
+    }
+
+    .carousel-control {
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      border: none;
+      font-size: 20px;
+      cursor: pointer;
+      padding: 10px;
+      border-radius: 50%;
+    }
+
+    @media (max-width: 992px) {
+      .carousel-card {
+        flex: 1 0 100%; /* 1 card per slide */
+        max-width: 100%;
+      }
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <nav class="navbar navbar-expand-md fixed">
-      <div class="container-fluid">
-        <div>
-          <img src="Image/Logo Passatempo.png" class="passatempo_logo">
-        </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-          <div class="offcanvas-header">
-            <h2 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h2>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>  
-          <div class="offcanvas-body">
-            <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
-              <li class="nav-item text-top">
-                <a class="nav-link active navegacao_link" aria-current="page" href="menu-2.html">Home</a>
-              </li>
-              <li class="nav-item navegacao_item">
-                <a class="nav-link navegacao_link" href="oficinas-2.html">Oficinas</a>
-              </li>
-              <li class="nav-item navegacao_item">
-                <a class="nav-link navegacao_link" href="eventos.html">Eventos Sociais</a>
-              </li>
-              <li class="nav-item navegacao_item">
-                <a class="nav-link navegacao_link" href="eventos.html">Eventos Corporativos</a>
-              </li>
-              <li class="nav-item navegacao_item">
-                <a class="nav-link navegacao_link" href="saudeBemEstar.html">Saúde e Bem-Estar</a>
-              </li>
-              <li class="nav-item navegacao_item">
-                <a class="nav-link navegacao_link" href="contato.html">Contato</a>
-              </li>
-              <li class="nav-item navegacao_item">
-                <a class="nav-link navegacao_link" href="adm.html">Admin</a>
-              </li>
-              <li class="nav-item navegacao_item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
-                  </svg>
-                </a>
-                <ul class="dropdown-menu dropdown-menu-lg-end">
-                  <li><a class="dropdown-item" href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
-                      <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
-                      <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
-                    </svg>
-                    Sair
-                  </a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
+  <div class="carousel-container-fluid">
+    <div class="carousel-track">
+      <!-- Card 1 -->
+      <div class="carousel-card">
+        <h5>Card 1</h5>
+        <p>Description for Card 1</p>
+        <img src="https://via.placeholder.com/300" alt="Card 1">
       </div>
-    </nav>
-  </header>
+      <!-- Card 2 -->
+      <div class="carousel-card">
+        <h5>Card 2</h5>
+        <p>Description for Card 2</p>
+        <img src="https://via.placeholder.com/300" alt="Card 2">
+      </div>
+      <!-- Card 3 -->
+      <div class="carousel-card">
+        <h5>Card 3</h5>
+        <p>Description for Card 3</p>
+        <img src="https://via.placeholder.com/300" alt="Card 3">
+      </div>
+      <!-- Card 4 -->
+      <div class="carousel-card">
+        <h5>Card 4</h5>
+        <p>Description for Card 4</p>
+        <img src="https://via.placeholder.com/300" alt="Card 4">
+      </div>
+      <!-- Card 5 -->
+      <div class="carousel-card">
+        <h5>Card 5</h5>
+        <p>Description for Card 5</p>
+        <img src="https://via.placeholder.com/300" alt="Card 5">
+      </div>
+      <!-- Card 6 -->
+      <div class="carousel-card">
+        <h5>Card 6</h5>
+        <p>Description for Card 6</p>
+        <img src="https://via.placeholder.com/300" alt="Card 6">
+      </div>
+      <!-- Card 7 -->
+      <div class="carousel-card">
+        <h5>Card 7</h5>
+        <p>Description for Card 7</p>
+        <img src="https://via.placeholder.com/300" alt="Card 7">
+      </div>
+      <!-- Card 8 -->
+      <div class="carousel-card">
+        <h5>Card 8</h5>
+        <p>Description for Card 8</p>
+        <img src="https://via.placeholder.com/300" alt="Card 8">
+      </div>
+      <!-- Card 9 -->
+      <div class="carousel-card">
+        <h5>Card 9</h5>
+        <p>Description for Card 9</p>
+        <img src="https://via.placeholder.com/300" alt="Card 9">
+      </div>
+    </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Carousel Controls -->
+    <div class="carousel-controls">
+      <button class="carousel-control" id="prevBtn">&lt;</button>
+      <button class="carousel-control" id="nextBtn">&gt;</button>
+    </div>
+  </div>
+
+  <script>
+    const track = document.querySelector('.carousel-track');
+    const prevBtn = document.getElementById('prevBtn');
+    const nextBtn = document.getElementById('nextBtn');
+    const cards = document.querySelectorAll('.carousel-card');
+    const totalCards = cards.length;
+
+    let currentIndex = 0;
+
+    function getCardsPerSlide() {
+      return window.innerWidth > 992 ? 3 : 1; // Adjust cards per slide based on screen width
+    }
+  
+    function updateCarousel() {
+      const cardsPerSlide = getCardsPerSlide();
+      const cardWidth = cards[0].clientWidth;
+      const slideWidth = cardWidth * cardsPerSlide;
+      track.style.transform = `translateX(-${currentIndex * slideWidth}px)`;
+    }
+
+    nextBtn.addEventListener('click', () => {
+      const cardsPerSlide = getCardsPerSlide();
+      if (currentIndex < Math.ceil(totalCards / cardsPerSlide) - 1) {
+        currentIndex++;
+        updateCarousel();
+      }
+    });
+
+    prevBtn.addEventListener('click', () => {
+      if (currentIndex > 0) {
+        currentIndex--;
+        updateCarousel();
+      }
+    });
+
+    window.addEventListener('resize', updateCarousel);
+    window.addEventListener('load', updateCarousel); // Ensure the carousel initializes properly on load
+    updateCarousel(); // Initialize the carousel
+  </script>
 </body>
 </html>
