--- a/testes/tester_cards.html
+++ b/testes/tester_cards.html
@@ -13,9 +13,23 @@
 
 <style>
     .card{
-  padding: 20px;
-  background-color: #F6CC3A !important;
-}
+    padding: 20px;
+    background-color: #F6CC3A !important;
+    width: 100%;
+    height: 100%;
+    }
+
+
+    .container-slide{
+    width: 90% !important;
+    }
+    .carousel-control-prev{
+        display: inline-block !important; 
+
+    }
+    button.carousel-control-next{
+        display: inline-block;
+    }
 
 </style>
 
@@ -23,30 +37,34 @@
 
 
 
-    <div class="container-fluid border border-danger">
+    <div class="container-fluid border border-danger container-tudo">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div id="carouselExampleControls" class="carousel carousel-dark slide" >
         <div class="carousel-inner">
         <!-- 3 cards slide 1-->
         <div class="carousel-item active">
-            <div class="card-wrapper container-sm d-flex  justify-content-evenly border border-dark">
-                <div class="card  " style="width: 25rem;">
+            <div class="card-wrapper container-fluid container-slide d-flex  justify-content-evenly border border-dark">
+                <div class="card">
                     <div class="card-body">
                         <h5 class="card-title text-center">oficina 1</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore quisquam neque natus assumenda a dignissimos magni ipsum repellendus facilis porro fuga eius minus dicta aliquid, sint, possimus libero nesciunt deserunt!</p>
                     </div>
                     <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-bottom" alt="...">
                 </div>
 
-                <div class="card  " style="width: 25rem;">
+                <div class="card  " >
                     <div class="card-body">
                         <h5 class="card-title text-center">oficina 2</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt optio voluptates, iste accusamus dolorem delectus possimus ex repellendus non vero at quos unde dicta error ea laudantium? Illo, minus voluptates.</p>
                     </div>
                     <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-bottom" alt="...">
                 </div>
 
-                <div class="card  " style="width: 25rem;">
+                <div class="card  ">
                     <div class="card-body">
                         <h5 class="card-title text-center">oficina 3</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, enim distinctio. Impedit repellat, officiis dignissimos provident quisquam saepe hic nihil nemo qui assumenda. Eligendi et veniam sint cupiditate doloremque magnam.
+                        </p>
                     </div>
                     <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-bottom" alt="...">
                 </div>
@@ -55,24 +73,30 @@
 
         <!-- 3 cards slide 2-->
         <div class="carousel-item">
-            <div class="card-wrapper container-sm d-flex   justify-content-evenly">
-                <div class="card  " style="width: 18rem;">
+            <div class="card-wrapper container-fluid d-flex  container-slide justify-content-evenly">
+                <div class="card ">
                     <div class="card-body">
                         <h5 class="card-title text-center">oficina 4</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, enim distinctio. Impedit repellat, officiis dignissimos provident quisquam saepe hic nihil nemo qui assumenda. Eligendi et veniam sint cupiditate doloremque magnam.
+                        </p>                    
                     </div>
                     <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-bottom" alt="...">
                 </div>
 
-                <div class="card  " style="width: 18rem;">
+                <div class="card  ">
                     <div class="card-body">
                         <h5 class="card-title text-center">oficina 5</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, enim distinctio. Impedit repellat, officiis dignissimos provident quisquam saepe hic nihil nemo qui assumenda. Eligendi et veniam sint cupiditate doloremque magnam.
+                        </p>
                     </div>
                     <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-bottom" alt="...">
                 </div>
 
-                <div class="card  " style="width: 18rem;">
+                <div class="card  ">
                     <div class="card-body">
                         <h5 class="card-title text-center">oficina 6</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, enim distinctio. Impedit repellat, officiis dignissimos provident quisquam saepe hic nihil nemo qui assumenda. Eligendi et veniam sint cupiditate doloremque magnam.
+                        </p>
                     </div>
                     <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-bottom" alt="...">
                 </div>
@@ -84,24 +108,30 @@
 
         <!-- 3 cards slide 3-->
         <div class="carousel-item">
-            <div class="card-wrapper container-sm d-flex   justify-content-evenly">
-                <div class="card  " style="width: 18rem;">
+            <div class="card-wrapper container-fluid d-flex  container-slide justify-content-evenly">
+                <div class="card  " >
                     <div class="card-body">
                         <h5 class="card-title text-center">oficina 7</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, enim distinctio. Impedit repellat, officiis dignissimos provident quisquam saepe hic nihil nemo qui assumenda. Eligendi et veniam sint cupiditate doloremque magnam.
+                        </p>
                     </div>
                     <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-bottom" alt="...">
                 </div>
 
-                <div class="card  " style="width: 18rem;">
+                <div class="card  ">
                     <div class="card-body">
                         <h5 class="card-title text-center">oficina 8</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, enim distinctio. Impedit repellat, officiis dignissimos provident quisquam saepe hic nihil nemo qui assumenda. Eligendi et veniam sint cupiditate doloremque magnam.
+                        </p>
                     </div>
                     <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-bottom" alt="...">
                 </div>
 
-                <div class="card  " style="width: 18rem;">
+                <div class="card  " >
                     <div class="card-body">
                         <h5 class="card-title text-center">oficina 9</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, enim distinctio. Impedit repellat, officiis dignissimos provident quisquam saepe hic nihil nemo qui assumenda. Eligendi et veniam sint cupiditate doloremque magnam.
+                        </p>
                     </div>
                     <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-bottom" alt="...">
                 </div>
