--- a/telas_ofc/navbar-2.html
+++ b/telas_ofc/navbar-2.html
@@ -41,7 +41,7 @@
                 <a class="nav-link navegacao_link" href="saudeBemEstar-2.html">Saúde e Bem-Estar</a>
               </li>
               <li class="nav-item navegacao_item">
-                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
+                <a class="nav-link navegacao_link" href="galeria-2.html">Galeria</a>
               </li>
               <li class="nav-item navegacao_item">
                 <a class="nav-link navegacao_link" href="contato-2.html">Contato</a>
