--- a/telas_ofc/saudeBemEstar-2.html
+++ b/telas_ofc/saudeBemEstar-2.html
@@ -25,7 +25,6 @@
 
 
   <header>
-    <!-- navbar -->
     <nav class="navbar navbar-expand-md fixed">
       <div class="container-fluid">
         <div>
@@ -42,19 +41,19 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
               <li class="nav-item text-top">
-                <a class="nav-link navegacao_link" aria-current="page" href="home-2.html">Home</a>
+                <a class="nav-linknavegacao_link" aria-current="page" href="home-2.html">Home</a>
               </li>
               <li class="nav-item navegacao_item">
                 <a class="nav-link navegacao_link" href="oficinas-2.html">Oficinas</a>
               </li>
               <li class="nav-item navegacao_item">
-                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos Sociais</a>
+                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos</a>
               </li>
               <li class="nav-item navegacao_item">
-                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos Corporativos</a>
+                <a class="nav-link navegacao_link  active " href="saudeBemEstar-2.html">Saúde e Bem-Estar</a>
               </li>
               <li class="nav-item navegacao_item">
-                <a class="nav-link navegacao_link active" href="saudeBemEstar-2.html">Saúde e Bem-Estar</a>
+                <a class="nav-link navegacao_link" href="galeria-2.html">Galeria</a>
               </li>
               <li class="nav-item navegacao_item">
                 <a class="nav-link navegacao_link" href="contato-2.html">Contato</a>
