--- a/telas_ofc/galeria-2.html
+++ b/telas_ofc/galeria-2.html
@@ -86,7 +86,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
                             <li class="nav-item text-top">
-                                <a class="nav-link active navegacao_link" aria-current="page" href="home-2.html">Home</a>
+                                <a class="nav-link navegacao_link" aria-current="page" href="home-2.html">Home</a>
                             </li>
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="oficinas-2.html">Oficinas</a>
@@ -98,7 +98,7 @@
                                 <a class="nav-link navegacao_link" href="saudeBemEstar-2.html">Saúde e Bem-Estar</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
+                                <a class="nav-link navegacao_link  active" href="galeria-2.html">Galeria</a>
                             </li>
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="contato-2.html">Contato</a>
