--- a/telas_ofc/admin-2.html
+++ b/telas_ofc/admin-2.html
@@ -26,10 +26,10 @@
 
 <body onload="checarStatusLogin()">
   <header>
-    <nav class="navbar navbar-expand-md fixed">
+    <nav class="navbar navbar-expand-lg fixed">
       <div class="container-fluid">
         <div>
-          <img src="img/Logo Passatempo.png" class="passatempo_logo" alt="Logo Passatempo">
+          <img src="img/Logo Passatempo.png" class="passatempo_logo" alt="Logo da Passatempo">
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -78,7 +78,7 @@
     <div class="container-fluid tudo">
       <div class="row  justify-content-start ">
         <div class="col-12 text-center">
-            <img src="Image/Logo Passatempo.png" alt="logo" class="img-fluid" style="max-height: 100px;">
+            <img src="img/Logo Passatempo.png" alt="Logo da Passatempo" class="img-fluid" style="max-height: 100px;">
         </div>
         <div class="col-12 align-self-center text-center mt-4">
             <h1 class="titulo_cabecalho">Login</h1>
