--- a/telas_ofc/eventos-2.html
+++ b/telas_ofc/eventos-2.html
@@ -27,7 +27,7 @@
 
   <!-- navbar -->
   <header>
-    <nav class="navbar navbar-expand-md fixed">
+    <nav class="navbar navbar-expand-lg fixed">
       <div class="container-fluid">
         <div>
           <img src="img/Logo Passatempo.png" class="passatempo_logo" alt="Logo Passatempo">
@@ -80,7 +80,7 @@
   <div class="container-fluid">
     <div class="row justify-content-center align-items-end ">
       <div class="col-12 text-center">
-        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="black" class="bi bi-calendar-event" viewBox="0 0 16 16">
+        <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="black" class="bi bi-calendar-event" viewBox="0 0 16 16">
           <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5z"/>
           <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
         </svg>
