--- a/telas_ofc/home-2.html
+++ b/telas_ofc/home-2.html
@@ -29,7 +29,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-md fixed">
+        <nav class="navbar navbar-expand-lg fixed">
           <div class="container-fluid">
             <div>
               <img src="img/Logo Passatempo.png" class="passatempo_logo" alt="Logo Passatempo">
