--- a/telas_ofc/navbar_adm.html
+++ b/telas_ofc/navbar_adm.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-md fixed">
+    <nav class="navbar navbar-expand-lg fixed">
       <div class="container-fluid">
         <div>
           <img src="img/Logo Passatempo.png" class="passatempo_logo" alt="Logo Passatempo">
