--- a/testes/galeria.html
+++ b/testes/galeria.html
@@ -218,7 +218,7 @@
 
 
     <header>
-        <nav class="navbar navbar-expand-md fixed">
+        <nav class="navbar navbar-expand-lg fixed">
             <div class="container-fluid">
               <div>
                 <img src="img/Logo Passatempo.png" class="passatempo_logo" alt="Logo Passatempo">
