--- a/telas_ofc/footer.html
+++ b/telas_ofc/footer.html
@@ -21,7 +21,7 @@
         <div class="container-fluid rodape">
             <div class="row justify-content-around align-items-center  g-3">
                 <!-- col botao contato -->
-                <a class="btn btn-primary  botao_contate_footer col-sm-8 col-md-6 col-lg-3 " href="contato.html" role="button" aria-pressed="true">Contate-nos</a>
+                <a class="btn btn-primary  botao_contate_footer col-8 col-sm-6 col-md-5 col-lg-3 " href="contato.html" role="button" aria-pressed="true"><div class="texto-botao">Contate-nos</div></a>
 
                 <!-- col com as redes sociais -->
                 <div class="col-sm-8 col-md-8 col-lg-4 redes_footer ">
