--- a/telas_ofc/saudeBemEstar-2.html
+++ b/telas_ofc/saudeBemEstar-2.html
@@ -103,7 +103,7 @@
             </div>
         </div>
 
-        <div class="container-fluid mt-5 g-2">
+        <div class="container-fluid mt-5 g-2 ">
           <div class="row justify-content-center align-items-center border border-danger container_descricao">
             <div class="col-sm-12 col-md-11 col-lg-11 col-xl-5 text-start p-4 border border-dark">
               <h1 class="titulo_descricao">Clínica Esportiva</h1>
@@ -123,7 +123,7 @@
                 Pilates, Funcional Kids e muito mais.
               </p>
             </div>
-            <div class="col-sm-12 col-md-11 col-lg-11 col-xl-7 border border-danger imagem_descricao ">
+            <div class="col-sm-12 col-md-11 col-lg-11 col-xl-7 imagem_descricao ">
               <div class="row border border-dark">
                 <div class="col-3 ">
                   <img src="img/purpurina_laranja.png" alt="" class="brilho">
@@ -140,7 +140,7 @@
           </div>
           <br>
           <br>
-          <div class="row justify-content-center align-items-center border border-danger container_descricao">
+          <div class="row justify-content-center container_descricao">
             <div class="col-sm-12 col-md-11 col-lg-11 col-xl-5 text-start p-4 border border-dark">
               <h1 class="titulo_descricao">Estação Esportiva</h1>
               <p id="texto4">
