Feito as telas do admin (video em 1080p)
As telas de Dados estatísticos, Tutorial e adicioanr imagem.

Video em 1080p

--- a/telas_ofc/dados_estatisticos.html
+++ b/telas_ofc/dados_estatisticos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -74,11 +74,11 @@
         <table>
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>IP</th>
-                    <th>HORA ENTRADA</th>
-                    <th>HORA SAIDA</th>
-                    <th>TEMPO DE DURAÇÃO</th>
+                    <th id="ID">ID</th>
+                    <th id="IP">IP</th>
+                    <th id="hora_entrada">HORA ENTRADA</th>
+                    <th id="hora_saida">HORA SAIDA</th>
+                    <th id="tempo_duracao">TEMPO DE DURAÇÃO</th>
                 </tr>
             </thead>
             <tbody>
