Consegui arrumar o texto para voz
Agora o microfone fica riscado quando clica, eu tinha errado um link, coloquei nas telas NÃO oficiais por enquanto.

--- a/testes/teste_de_arrumar_voz.html
+++ b/testes/teste_de_arrumar_voz.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    <h1>ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó </h1>
+    <h1>ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó ó .</h1>
     <div class="button-container">
         <button class="btn iniciar" id="toggleReading">
             <i class="fas fa-microphone"></i> <!-- Começar com o ícone de microfone -->
