--- a/oficinas.html
+++ b/oficinas.html
@@ -21,13 +21,14 @@
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
     <!-- Font Awesome para os ícones do texto por voz -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-        integrity="sha384-o0eywV9zL0zQ+O9T84vKQ7RMLvO1Rj1Djt+PTnWpVePsUEas10uYATg+nROviyd4" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    
 </head>
 <!-- NAV -->
 
 <body>
     <!--  começo vlibras  -->
+
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
         <div vw-plugin-wrapper>
@@ -38,7 +39,9 @@
     <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
+
     <!--  fim vlibras  -->
+      
     <header>
         <nav class="navbar navbar-expand-md fixed ">
             <div class="container-fluid">
@@ -88,7 +91,7 @@
 
     <div class="button-container">
         <button class="btn iniciar" id="toggleReading">
-            <i class="fas fa-microphone"></i>
+            <i class="fas fa-microphone"></i> <!-- Começar com o ícone de microfone -->
         </button>
     </div>
 
@@ -555,8 +558,7 @@
         });
     </script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/js/all.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6 .5.0/js/all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
