Progresso em adicionar checagem de token

--- a/adm.html
+++ b/adm.html
@@ -97,8 +97,7 @@
         <div class="col-12 align-self-center text-center mt-4">
             <h1 class="titulo_cabecalho">Login</h1>
         </div>
-    <div class="d-none alert alert-danger alert-dismissible fade alert-login" role="alert">
-      Preencha todos os campos corretamente
+    <div class="d-none alert alert-dismissible fade alert-login" role="alert">
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
     </div>
     </div>
