--- a/telas_ofc/navbar-2.html
+++ b/telas_ofc/navbar-2.html
@@ -27,8 +27,8 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>  
           <div class="offcanvas-body">
-            <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
-              <li class="nav-item text-top">
+            <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1 text-center">
+              <li class="nav-item  navegacao_item">
                 <a class="nav-link active navegacao_link" aria-current="page" href="home-2.html">Home</a>
               </li>
               <li class="nav-item navegacao_item">
