--- a/telas_ofc/saudeBemEstar-2.html
+++ b/telas_ofc/saudeBemEstar-2.html
@@ -125,10 +125,10 @@
             </div>
             <div class="col-sm-12 col-md-11 col-lg-11 col-xl-7 imagem_descricao ">
               <div class="row border border-dark">
-                <div class="col-3 ">
+                <div class="col-12 col-sm-3">
                   <img src="img/purpurina_laranja.png" alt="" class="brilho">
                 </div>
-                <div class="col-9">
+                <div class="col-12 col-sm-9">
                   <img src="img/coloque_imagem.PNG" alt="" id="imagem1">
                 </div>
                 <div class="col-12 align-self-end text-end">
@@ -159,10 +159,10 @@
             </div>
             <div class="col-sm-12 col-md-11 col-lg-11 col-xl-7 border border-danger imagem_descricao ">
               <div class="row border border-dark">
-                <div class="col-3 ">
+                <div class="col-12 col-sm-3">
                   <img src="img/purpurina_laranja.png" alt="" class="brilho">
                 </div>
-                <div class="col-9">
+                <div class="col-12 col-sm-9">
                   <img src="img/coloque_imagem.PNG" alt="" id="imagem1">
                 </div>
                 <div class="col-12 align-self-end text-end">
