--- a/telas_ofc/tester_cards.html
+++ b/telas_ofc/tester_cards.html
@@ -21,7 +21,7 @@
 
 
     .container-slide{
-    width: 90% !important;
+    width: 100% !important;
     }
     .carousel-control-prev{
         display: inline-block !important; 
@@ -44,10 +44,11 @@
         <!-- 3 cards slide 1-->
         <div class="carousel-item active">
             <div class="card-wrapper container-fluid container-slide d-flex  justify-content-evenly border border-dark">
-                <div class="card">
+                <div class="card m-4">
                     <div class="card-body">
                         <h5 class="card-title text-center">oficina 1</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore quisquam neque natus assumenda a dignissimos magni ipsum repellendus facilis porro fuga eius minus dicta aliquid, sint, possimus libero nesciunt deserunt!</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem ullam voluptate voluptatem itaque architecto obcaecati et? Sint distinctio nemo, asperiores maiores ipsam odit quaerat voluptatem exercitationem blanditiis tenetur, illo labore!
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias ut, quidem reprehenderit ratione repellat illum accusantium vel minima, mollitia beatae fuga aliquam! Natus vitae saepe a beatae praesentium voluptatibus consequatur!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa itaque obcaecati omnis earum dolores pariatur, doloremque reprehenderit quo, neque, animi quasi alias veniam enim cupiditate quibusdam ad recusandae. Perspiciatis, necessitatibus? ipsum dolor sit amet, consectetur adipisicing elit. Inventore quisquam neque natus assumenda a dignissimos magni ipsum repellendus facilis porro fuga eius minus dicta aliquid, sint, possimus libero nesciunt deserunt!</p>
                     </div>
                     <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-bottom" alt="...">
                 </div>
