telas finais att

--- a/telas_ofc/TESTE-GAleria.html
+++ b/telas_ofc/TESTE-GAleria.html
@@ -136,6 +136,12 @@
         <img src="img/coloque_imagem.PNG" alt="Foto 2" class="all events" onclick="openModal(this.src)">
         <img src="img/coloque_imagem.PNG" alt="Foto 3" class="all health" onclick="openModal(this.src)">
         <img src="img/coloque_imagem.PNG" alt="Foto 4" class="all workshops" onclick="openModal(this.src)">
+        <img src="img/coloque_imagem.PNG" alt="Foto 4" class="all workshops" onclick="openModal(this.src)">
+        <img src="img/coloque_imagem.PNG" alt="Foto 4" class="all workshops" onclick="openModal(this.src)">
+        <img src="img/coloque_imagem.PNG" alt="Foto 4" class="all workshops" onclick="openModal(this.src)">
+        <img src="img/coloque_imagem.PNG" alt="Foto 4" class="all workshops" onclick="openModal(this.src)">
+
+
     </div>
 
     <!-- Modal -->
