Adicionei botão de voltar e imagens
Coloquei as imagens pedidas e adicionei o botão de voltar na páginas Tutorial, Dados Estatisticos e Adicionar Imagem.

--- a/telas_ofc/tutorial.html
+++ b/telas_ofc/tutorial.html
@@ -75,8 +75,8 @@
             Seu navegador não suporta o formato de vídeo.
         </video>
     </div>
-
-
+    <a href="area_admin_teste.html" class="back-button">
+        <span>&#10140;</span>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
