--- a/telas_ofc/dados_estatisticos.html
+++ b/telas_ofc/dados_estatisticos.html
@@ -69,7 +69,6 @@
     </header>
     <div class="container-fluid d-flex flex-column align-items-center justify-content-center ">
         <img src="img/Logo Passatempo.png" alt="Logo Passatempo" id="logo2" class="mb-3 mt-5">
-
         <h1>Dados Estatísticos</h1>
         <table>
             <thead>
@@ -141,8 +140,8 @@
             </tbody>
         </table>
     </div>
-
-
+    <a href="area_admin_teste.html" class="back-button">
+        <span>&#10140;</span>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
