telas admin vsf

--- a/telas_finais/pg-404.html
+++ b/telas_finais/pg-404.html
@@ -57,7 +57,7 @@ h2 + p {
 <body>
     <div class="flex-container">
         <h2>4</h2>
-        <img src="img/Logo Passatempo.png" style="width: 180px;">
+        <img src="image/logo_passatempo_digital.png" style="width: 180px;">
         <h2>4</h2>
     </div>
     <p>Page Not Found</p>
