css telas admin

--- a/telas_finais/add_img.html
+++ b/telas_finais/add_img.html
@@ -84,7 +84,7 @@
         </nav>
     </header>
 
-    
+
     <div class="container-fluid d-flex flex-column align-items-center add_img justify-content-center">
         <img src="image/logo_passatempo_digital.png" alt="Logo Passatempo" id="logo2" class="mb-3 mt-5">
 
@@ -102,7 +102,7 @@
             </div>
         </div>
     </div>
-    <a href="area_admin_teste.html" class="back-button">
+    <a href="tela_admin.html" class="back-button">
         <span>&#10140;</span>
 </body>
  
