--- a/telas_ofc/galeria-2.html
+++ b/telas_ofc/galeria-2.html
@@ -254,21 +254,21 @@
     </div>
 
     <div class="tabs">
-        <div class="tab active" onclick="showGallery('all')">Todas as Fotos</div>
-        <div class="tab" onclick="showGallery('workshops')">Oficinas</div>
-        <div class="tab" onclick="showGallery('events')">Eventos</div>
-        <div class="tab" onclick="showGallery('health')">Saúde e Bem-estar</div>
+        <div class="tab active" onclick="showGallery('todos')">Todas as Fotos</div>
+        <div class="tab" onclick="showGallery('ofinas')">Oficinas</div>
+        <div class="tab" onclick="showGallery('eventos')">Eventos</div>
+        <div class="tab" onclick="showGallery('saude')">Saúde e Bem-estar</div>
     </div>
     <br>
     <br>
     <div class="gallery" id="gallery">
-        <img src="img/coloque_imagem.PNG" alt="Foto 1" class="all workshops" onclick="openModal(this.src)">
-        <img src="img/coloque_imagem.PNG" alt="Foto 2" class="all events" onclick="openModal(this.src)">
-        <img src="img/coloque_imagem.PNG" alt="Foto 3" class="all health" onclick="openModal(this.src)">
-        <img src="img/coloque_imagem.PNG" alt="Foto 4" class="all workshops" onclick="openModal(this.src)">
-        <img src="img/coloque_imagem.PNG" alt="Foto 4" class="all workshops" onclick="openModal(this.src)">
-        <img src="img/coloque_imagem.PNG" alt="Foto 4" class="all workshops" onclick="openModal(this.src)">
-        <img src="img/coloque_imagem.PNG" alt="Foto 4" class="all workshops" onclick="openModal(this.src)">
+        <img src="img/coloque_imagem.PNG" alt="Foto 1" class="all oficinas" onclick="openModal(this.src)">
+        <img src="img/coloque_imagem.PNG" alt="Foto 2" class="all eventos" onclick="openModal(this.src)">
+        <img src="img/coloque_imagem.PNG" alt="Foto 3" class="all saude" onclick="openModal(this.src)">
+        <img src="img/coloque_imagem.PNG" alt="Foto 4" class="all oficinas" onclick="openModal(this.src)">
+        <img src="img/coloque_imagem.PNG" alt="Foto 4" class="all oficinas" onclick="openModal(this.src)">
+        <img src="img/coloque_imagem.PNG" alt="Foto 4" class="all oficinas" onclick="openModal(this.src)">
+        <img src="img/coloque_imagem.PNG" alt="Foto 4" class="all oficinas" onclick="openModal(this.src)">
 
 
     </div>
