--- a/telas_ofc/dados_estatisticos.html
+++ b/telas_ofc/dados_estatisticos.html
@@ -70,7 +70,7 @@
     <div class="container-fluid d-flex flex-column align-items-center justify-content-center ">
         <img src="img/Logo Passatempo.png" alt="Logo Passatempo" id="logo2" class="mb-3 mt-5">
         <h1>Dados Estatísticos</h1>
-        <table>
+        <table class="dados">
             <thead>
                 <tr>
                     <th id="ID">ID</th>
