Colocado os elementos de teste
Coloquei os elementos para testes para serem reajustados para as telas finais, não consegui melhorar a qualidade de imagem dos elementos de canto e não descobri como implementar o erro 404.

--- a/contato.html
+++ b/contato.html
@@ -236,7 +236,10 @@
         </div>
         </div>
     </section>
-
+    <picture>
+        <img src="telas_ofc/img/ameba_vermelha.png" alt="" id="ameba_vermelha">
+        <img src="telas_ofc/img/canto_amarelo.png" alt="" id="canto_amarelo">
+    </picture>
     <script>
         let speech; // Variável para armazenar o objeto de fala
         let isReading = false; // Variável para controlar o estado de leitura
