--- a/eventos.html
+++ b/eventos.html
@@ -82,7 +82,9 @@
         </div>
     </nav>
   </header>
-
+  <picture>
+    <img src="telas_ofc/img/canto_laranja.png" alt="borda laranja" id="canto_laranja">
+  </picture>
   <div class="button-container">
     <button class="btn iniciar" id="toggleReading">
       <i class="fas fa-microphone"></i>
