--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <style>
+    <!-- <style>
         body {
             background-color: #8DA5ED !important;
             background-image: url('Image/home_fundo.PNG');
@@ -36,7 +36,7 @@
             background-repeat: no-repeat;
             object-fit: cover;
         }
-    </style>
+    </style> -->
 
     <!--  começo vlibras  -->
     <div vw class="enabled">
@@ -99,7 +99,6 @@
         <!-- espaçamento -->
         <br>
         <br>
-
         <br>
         <br>
         <br>
@@ -242,9 +241,14 @@
             <br>
 
         </div>
-
+    
     </header>
-
+    <picture>
+        <img src="telas_ofc/img/arco_iris.png" alt="arco iris" id="arco_iris">
+        <img src="telas_ofc/img/ameba_vermelha.png" alt=" ameba vermelha" id="ameba_verm">
+        <img src="telas_ofc/img/canto_amarelo.png" alt="canto amarelo" id="canto_amar">
+    </picture>
+    
     <div class="button-container">
         <button class="btn iniciar" id="toggleReading">
             <i class="fas fa-microphone"></i>
@@ -372,6 +376,9 @@
 
     <!-- espaçamento -->
 
+    <br>
+    <br>
+    <br>
     <br>
     <br>
     <br>
