--- a/saudeBemEstar.html
+++ b/saudeBemEstar.html
@@ -140,9 +140,9 @@
         </div>
         <div class="col-md-5">
           <img src="Image/coloque_imagem.PNG" alt="" id="imagem1"><br>
-          <img src="Image/purpurina_laranja.png" alt="" id="imagem2">
+          
           <img src="Image/coloque_imagem.PNG" alt="" id="imagem3">
-          <img src="Image/purpurina_azul.png" alt="" id="imagem4">
+
         </div>
       </div>
     </div>
@@ -173,9 +173,9 @@
         </div>
         <div class="col-md-5">
           <img src="Image/coloque_imagem.PNG" alt="" id="imagem5"><br>
-          <img src="Image/purpurina_laranja.png" alt="" id="imagem6">
+          
           <img src="Image/coloque_imagem.PNG" alt="" id="imagem7">
-          <img src="Image/purpurina_azul.png" alt="" id="imagem8">
+
         </div>
       </div>
     </div>
@@ -186,7 +186,21 @@
     <br>
 
   </div>
+  <picture>
+    <img src="telas_ofc/img/purpurina_azul.png" alt="brilho azul" id="purpurina_azul">
+    <img src="telas_ofc/img/purpurina_amarela.png" alt="brilho amarelo" id="purpurina_amarela">
+    <img src="telas_ofc/img/purpurina_laranja.png" alt="brilho laranja"id="purpurina_laranja">
 
+    <img src="telas_ofc/img/purpurina_azul.png" alt="brilho azul" id="purpurina_azul2">
+    <img src="telas_ofc/img/purpurina_amarela.png" alt="brilho amarelo" id="purpurina_amarela2">
+    <img src="telas_ofc/img/purpurina_laranja.png" alt="brilho laranja"id="purpurina_laranja2">
+
+    <img src="telas_ofc/img/purpurina_azul.png" alt="brilho azul" id="purpurina_azul3">
+    <img src="telas_ofc/img/purpurina_laranja.png" alt="brilho laranja"id="purpurina_laranja3">
+
+    <img src="telas_ofc/img/purpurina_azul.png" alt="brilho azul" id="purpurina_azul4">
+    <img src="telas_ofc/img/purpurina_laranja.png" alt="brilho laranja"id="purpurina_laranja4">
+  </picture>
   <script>
     let speech; // Variável para armazenar o objeto de fala
     let isReading = false; // Variável para controlar o estado de leitura
