--- a/telas_finais/home.html
+++ b/telas_finais/home.html
@@ -114,7 +114,7 @@
                    <h1 id="texto2">--Eventos--</h1>
                    <p id="texto3">A Passatempo Eventos é composta por profissionais qualificados e dedicados. Essa diversidade de conhecimentos e habilidades nos permite oferecer um atendimento personalizado e eficiente. Além disso, a constante troca de experiências e a colaboração entre os membros da equipe enriquecem nosso ambiente de trabalho, garantindo um ambiente acolhedor e propício ao aprendizado. Muitos profissionais fizeram parte de um curso Recreatur que oferecemos em São Paulo, incentivando a liderança nos jovens e expandindo suas perspectivas de trabalho
                    </p>
-                   <a href="#texto4" class="btn btn-light botao_carrossel text-center w-50">Conheça</a>
+                   <a href="#texto4" class="btn btn-light botao_carrossel text-center w-50"><b>Conheça</b></a>
                 </div>
             </div>
         </div>
