--- a/telas_finais/navbar.html
+++ b/telas_finais/navbar.html
@@ -29,25 +29,25 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1 text-center">
                             <li class="nav-item  navegacao_item">
-                                <a class="nav-link active navegacao_link" aria-current="page" href="home-2.html">Home</a>
+                                <a class="nav-link active navegacao_link" aria-current="page" href="home.html">Home</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="oficinas-2.html">Oficinas</a>
+                                <a class="nav-link navegacao_link" href="oficinas.html">Oficinas</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos</a>
+                                <a class="nav-link navegacao_link" href="eventos.html">Eventos</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="saudeBemEstar-2.html">Saúde e Bem-Estar</a>
+                                <a class="nav-link navegacao_link" href="saude.html">Saúde e Bem-Estar</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="galeria-2.html">Galeria</a>
+                                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="contato-2.html">Contato</a>
+                                <a class="nav-link navegacao_link" href="contato.html">Contato</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="admin-2.html">Admin</a>
+                                <a class="nav-link navegacao_link" href="login.html">Admin</a>
                             </li>
                         </ul>
                     </div>
